// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileBottomNav > renders links for main sections 1`] = `
<nav
  aria-label="Main navigation"
  class="fixed bottom-0 left-0 right-0 z-(--z-navbar) flex h-(--bottom-nav-h) w-full items-center justify-around bottom-nav-glass border-t border-glass-border pb-(--safe-area-bottom) shadow-up transition-all md:hidden"
  role="navigation"
>
  <span
    aria-hidden="true"
    class="absolute rounded-(--bottom-nav-pill-radius) bottom-nav-pill z-negative"
    style="transform: translate3d(8px, 4px, 0); transition: none;"
  />
  <a
    aria-current="page"
    aria-label="Home"
    class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none active"
    data-status="active"
    data-tab-key="/dashboard"
    href="/dashboard"
  >
    <div
      class="relative z-surface"
    >
      <span
        class="block"
      >
        <span
          class="flex items-center justify-center rounded-lg p-0.5"
          style="background-color: var(--nav-active-glow);"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-dashboard text-(--nav-active-color)"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
        </span>
      </span>
    </div>
    <span
      class="z-surface text-[10px] font-bold uppercase tracking-tight text-(--nav-active-color) mt-0.5 leading-tight"
    >
      Home
    </span>
  </a>
  <a
    aria-label="News"
    class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
    data-tab-key="/news"
    href="/news"
  >
    <div
      class="relative z-surface"
    >
      <span
        class="block"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper text-(--text-secondary) group-hover:text-(--text-primary)"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
      </span>
    </div>
    <span
      class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
    />
  </a>
  <a
    aria-label="Events"
    class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
    data-tab-key="/events"
    href="/events"
  >
    <div
      class="relative z-surface"
    >
      <span
        class="block"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar text-(--text-secondary) group-hover:text-(--text-primary)"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
      </span>
    </div>
    <span
      class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
    />
  </a>
  <a
    aria-label="Schedule"
    class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
    data-tab-key="/schedule"
    href="/schedule"
  >
    <div
      class="relative z-surface"
    >
      <span
        class="block"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days text-(--text-secondary) group-hover:text-(--text-primary)"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
      </span>
    </div>
    <span
      class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
    />
  </a>
  <a
    aria-label="Profile"
    class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
    data-tab-key="/profile"
    href="/profile"
  >
    <div
      class="relative z-surface"
    >
      <span
        class="block"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user text-(--text-secondary) group-hover:text-(--text-primary)"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
    </div>
    <span
      class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
    />
  </a>
</nav>
`;

exports[`MobileBottomNav > renders links for main sections 2`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="fixed bottom-0 left-0 right-0 z-(--z-navbar) flex h-(--bottom-nav-h) w-full items-center justify-around bottom-nav-glass border-t border-glass-border pb-(--safe-area-bottom) shadow-up transition-all md:hidden"
    role="navigation"
  >
    <span
      aria-hidden="true"
      class="absolute rounded-(--bottom-nav-pill-radius) bottom-nav-pill z-negative"
      style="transform: translate3d(8px, 4px, 0); transition: none;"
    />
    <a
      aria-current="page"
      aria-label="Home"
      class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none active"
      data-status="active"
      data-tab-key="/dashboard"
      href="/dashboard"
    >
      <div
        class="relative z-surface"
      >
        <span
          class="block"
        >
          <span
            class="flex items-center justify-center rounded-lg p-0.5"
            style="background-color: var(--nav-active-glow);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layout-dashboard text-(--nav-active-color)"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="9"
                rx="1"
                width="7"
                x="3"
                y="3"
              />
              <rect
                height="5"
                rx="1"
                width="7"
                x="14"
                y="3"
              />
              <rect
                height="9"
                rx="1"
                width="7"
                x="14"
                y="12"
              />
              <rect
                height="5"
                rx="1"
                width="7"
                x="3"
                y="16"
              />
            </svg>
          </span>
        </span>
      </div>
      <span
        class="z-surface text-[10px] font-bold uppercase tracking-tight text-(--nav-active-color) mt-0.5 leading-tight"
      >
        Home
      </span>
    </a>
    <a
      aria-label="News"
      class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
      data-tab-key="/news"
      href="/news"
    >
      <div
        class="relative z-surface"
      >
        <span
          class="block"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-newspaper text-(--text-secondary) group-hover:text-(--text-primary)"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 18h-5"
            />
            <path
              d="M18 14h-8"
            />
            <path
              d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
            />
            <rect
              height="4"
              rx="1"
              width="8"
              x="10"
              y="6"
            />
          </svg>
        </span>
      </div>
      <span
        class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
      />
    </a>
    <a
      aria-label="Events"
      class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
      data-tab-key="/events"
      href="/events"
    >
      <div
        class="relative z-surface"
      >
        <span
          class="block"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar text-(--text-secondary) group-hover:text-(--text-primary)"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
        </span>
      </div>
      <span
        class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
      />
    </a>
    <a
      aria-label="Schedule"
      class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
      data-tab-key="/schedule"
      href="/schedule"
    >
      <div
        class="relative z-surface"
      >
        <span
          class="block"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar-days text-(--text-secondary) group-hover:text-(--text-primary)"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
            <path
              d="M8 14h.01"
            />
            <path
              d="M12 14h.01"
            />
            <path
              d="M16 14h.01"
            />
            <path
              d="M8 18h.01"
            />
            <path
              d="M12 18h.01"
            />
            <path
              d="M16 18h.01"
            />
          </svg>
        </span>
      </div>
      <span
        class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
      />
    </a>
    <a
      aria-label="Profile"
      class="group relative flex flex-1 flex-col items-center justify-center py-1 text-text-primary transition-all outline-none select-none"
      data-tab-key="/profile"
      href="/profile"
    >
      <div
        class="relative z-surface"
      >
        <span
          class="block"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user text-(--text-secondary) group-hover:text-(--text-primary)"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </span>
      </div>
      <span
        class="h-1 w-1.5 rounded-full bg-(--text-tertiary) mt-1.5 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
      />
    </a>
  </nav>
  <span
    aria-hidden="true"
    class="h-(--bottom-nav-h) bg-transparent md:hidden relative z-decor"
  />
</div>
`;
